--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -58,10 +58,10 @@
 		),
 
 		accent2: (
-			bg:				#00ffcc,
+			bg:				#FFFFFF,
 			fg-bold:		#ffffff,
-			fg:				mix(#00ffcc, #ffffff, 25%),
-			fg-light:		mix(#00ffcc, #ffffff, 40%),
+			fg:				mix(#FFFFFF, #ffffff, 25%),
+			fg-light:		mix(#FFFFFF, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -93,8 +93,8 @@
 		accent5: (
 			bg:				#E09A9D,
 			fg-bold:		#ffffff,
-			fg:				mix(#E09A9D, #ffffff, 25%),
-			fg-light:		mix(#E09A9D, #ffffff, 40%),
+			fg:				mix(#D5D582, #ffffff, 25%),
+			fg-light:		mix(#D5D582, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
